Attempting Fix for Horizontal Scroll on Phone

--- a/PersonalWebsite/PersonalWebsite/CSS/MainPage.css
+++ b/PersonalWebsite/PersonalWebsite/CSS/MainPage.css
@@ -1,5 +1,9 @@
 ﻿body {
     overflow-x: hidden;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .hatch-background {
